[project]
name = "noaa-fisheries"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "s3fs>=2024.0",
    "fsspec>=2024.0",
    "psutil>=5.9.0",
    "boto3",
    "duckdb",
    "httpx",
    "pandas",
    "pyarrow",
    "deltalake>=0.17.0",
    "ratelimit",
    "requests",
    "sqlalchemy>=2.0.43",
    "tenacity",
]
